tests/paczka1/fuzzy1/17241807.err
Error in line 12: ccz2 A873 47,4
Error in line 6: KhNRf A853 34,4
Error in line 8: rIoBArjxA A873 39,0
Error in line 16: KhNRf A873 75,7
Error in line 25: KhNRf A853 25,9
